#fix #37 ISS jumping to 0:0. First hidding the div and display only when positioned, after api call

--- a/PublishedModules/mjlill/InternationalSpaceStation/widgets/css/WorldMap.css
+++ b/PublishedModules/mjlill/InternationalSpaceStation/widgets/css/WorldMap.css
@@ -23,6 +23,7 @@
 }
 
 .WorldMap_satellite {
+	display: none;
 	position: absolute;
 	top: -15px;
 	left: -10px;
